--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,4 +1,3 @@
----
 name: Checks
 
 on: [push]
@@ -13,9 +12,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Set up Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker-compose
+
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
+
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"      
+        run: docker-compose run --rm app sh -c "flake8"
